<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/bigImage"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:contentDescription="@string/imageDesc" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="374dp"
            android:layout_height="320dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bigImage" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/linearLayout">
        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameTextView" android:textAlignment="center"/>
        <TextView
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleTextView" android:textAlignment="center"/>
        <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailTextView" android:textAlignment="center"/>
        <TextView
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phoneTextView" android:textAlignment="center"/>
        <TextView
                android:text="@string/department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/departmentTextView" android:textAlignment="center"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
        <TextView
                android:text="@string/moreInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/textView"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>