<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content" android:id="@+id/linearLayout2">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    >
        <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp" app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/employeeImage" android:contentDescription="@string/imageDesc"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="269dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameTextView" android:text="@string/name"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleTextView" android:text="@string/title"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailTextView" android:text="@string/email"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneTextView" android:text="@string/phone"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/departmentTextView" android:text="@string/department"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
